# python-wsgi-test-01

./: README.md  pyproject.toml
python_wsgi_test_01/: wsgi_basic.py
tests/: test_python_wsgi_test_01.py
